--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My A-Frame Project</title>
+    <title>My A-Frame Custom Object</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <!-- Load the custom GLTF model -->
+      <a-asset-item id="custom-model" src="models/building.gltf"></a-asset-item>
+
       <a-sky color="#ECECEC"></a-sky>
+
+      <!-- Position and scale the custom model in the scene -->
+      <a-entity gltf-model="#custom-model" position="0 1 -3" scale="0.5 0.5 0.5"></a-entity>
     </a-scene>
   </body>
 </html>
