--- a/index.html
+++ b/index.html
@@ -1,51 +1,49 @@
-<!doctype html>
-<html>
-    <head>
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR Building with Custom Marker</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/1.7.2/aframe/build/aframe-ar.min.js"></script>
+    <style>
+      body, html { margin: 0; padding: 0; overflow: hidden; }
+    </style>
+  </head>
+  <body>
+    <!-- A-Frame Scene with AR.js -->
+    <a-scene
+      embedded
+      arjs="sourceType: webcam; detectionMode: mono; debugUIEnabled: false;">
+      
+      <!-- Assets for 3D Model -->
+      <a-assets>
+        <!-- Load the Building.glb model -->
+        <a-asset-item id="building" src="models/Building.glb"></a-asset-item>
+      </a-assets>
 
-    <body style="margin: 0; overflow: hidden;">
-        <a-scene
-            vr-mode-ui="enabled: false;"
-            loading-screen="enabled: false;"
-            renderer="logarithmicDepthBuffer: true;"
-            arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-            id="scene"
-            embedded
-            gesture-detector
-        >
-            <a-assets>
-                <a-asset-item
-                    id="animated-asset"
-                    src="assets/asset.glb"
-                ></a-asset-item>
-            </a-assets>
+      <!-- Custom Marker where the model will appear -->
+      <a-marker type="pattern" url="patterns/marker.patt">
+        <!-- Add the 3D model to the marker -->
+        <a-entity id="building-entity" gltf-model="#building" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+      </a-marker>
 
-            <a-marker
-                id="animated-marker"
-                type="pattern"
-                preset="custom"
-                url="assets/marker.patt"
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
-            >
-                <a-entity
-                    id="bowser-model"
-                    scale="0.1981054294145875 0.1981054294145875 0.1981054294145875"
-                    animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
-                    class="clickable"
-                    gesture-handler
-                ></a-entity>
-            </a-marker>
+      <!-- Ensure AR.js camera is enabled -->
+      <a-entity camera></a-entity>
+    </a-scene>
 
-            <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+    <script>
+      // Wait for the scene to load fully
+      document.addEventListener('DOMContentLoaded', function() {
+        // Select the building entity in A-Frame
+        const buildingEntity = document.querySelector('#building-entity');
+
+        // Add a click event listener for the touch interaction
+        buildingEntity.addEventListener('click', function () {
+          // Redirect to croqworkstudio.com when the model is clicked (touched)
+          window.location.href = 'https://croqworkstudio.com';
+        });
+      });
+    </script>
+  </body>
 </html>
